--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3"
+    "prettier": "3.5.3"
   },
   "eslintConfig": {
     "root": true,
